--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,82 @@
 main{
-    border : 3px solid red;
-       
+    /* border : 3px solid red;   */
+    display : flex;
+    align-items : center;
+    justify-content : center;  
+}
+
+.main-section{
+    /* border : 3px solid red; */
+    display : flex;
+    flex-direction: column;
+    margin-top : 15rem;
+    gap : 1rem;
+    padding : 1.5rem;
+}
+
+.main-section h1{
+    font-family: var(--homepage-heading-font);
+    text-align: center;
+    font-size : 5rem;
+    /* border : 3px solid red; */
+}
+
+.main-section h1 span{
+    color : var(--test-color);
+}
+
+.main-section p{
+    text-align: center;
+    /* border : 3px solid red; */
+    font-size : 2rem;
+    font-family: var(--nav-list-items-font);
+    color : var(--dark-gray);
+}
+
+.btn-section{
+    /* border : 3px solid green; */
+    display : flex;
+    align-items : center;
+    justify-content : center;
+    margin-top : 1.5rem;
+    gap : 1.5rem;
+}
+
+.btn-main{
+    padding : 1.5rem;
+    font-size : 2rem;
+    border : 3px solid var(--test-color);
+    outline: none;
+    border-radius: 1rem;
+    cursor : pointer;
+    background-color: var(--light-test-color);
+}
+
+.btn-primary{
+    background-color : var(--test-color);
+    color : var(--background-color);
+    border : 3px solid var(--test-color);
+    cursor : pointer;
+    display: flex;
+    align-items: center;
+    justify-content : center;
+}
+
+.btn-flex-container{
+    display: flex;
+    align-items : center;
+    justify-content : center;
+}
+
+
+@media screen and (max-width : 800px){
+    .main-section h1{
+        font-size: 3.5rem;
+    }
+    .main-section p , .btn-main{
+        font-size: 2.3rem;
+    }   
+    .main-section{
+        margin-top : 8rem;
+    }
 }
