basic structure of doc website done

--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/main.css">
-    <link rel="stylesheet" href="./CSS/documentation.css">
-    <title>Zest UI</title>
+    <link rel="stylesheet" href="../../CSS/documentation.css">
+    <title>Avatar | ZestUI</title>
 </head>
 <body>
     <!-- <div class="mega-parent-flex-container"> -->
         <div class="container">
             <nav>
                 <div class="lib-name">
-                    <a href="./index.html">ZestUI</a>
+                    <a href="../../index.html">ZestUI</a>
                 </div>
                 <div class="nav-list">
                     <ul>
@@ -40,19 +39,44 @@
                 </div>
             </nav>
             <main>
-                <div class="main-section-home">
-                    <h1>A CSS <span>UI library</span> to design 
-                        your<br/> dream project faster
-                    </h1>
-                    <p>Zest UI is a CSS library, integrated with pre-defined styled classes, and <br/>Utilites, for a quick creation of websites, with much focus on Functionality.</p>
-                    <div class="btn-section-home">
-                        <button class="btn-main-home btn-primary-home">
-                             <a href="./components/avatar/avatar.html">Get started</a>
-                        </button>
-                        <button class="btn-main-home">
-                            <a href="https://github.com/dipen2000/zest-ui" target="_blank">Github</a>
-                       </button>
-                    </div>
+                <div class="content-section-container">
+                    <aside class="aside-left">
+                        <div class="moving-container">
+                            <div class="aside-list-container txt-align-center">
+                                <ul>
+                                    <h3>Get started</h3>
+                                    <li class="aside-list"><a href="#">Introduction</a></li>
+                                    <li class="aside-list"><a href="#">Colors</a></li>
+                                    <li class="aside-list"><a href="#">Typography</a></li>
+                                    <li class="aside-list"><a href="#">Conclusion</a></li>
+                                </ul>
+                            </div>
+                            <div class="aside-list-container txt-align-center">
+                                <ul>
+                                    <h3>Components</h3>
+                                    <li class="aside-list"><a href="#">Avatar</a></li>
+                                    <li class="aside-list"><a href="#">Badge</a></li>
+                                    <li class="aside-list"><a href="#">Alert</a></li>
+                                    <li class="aside-list"><a href="#">Button</a></li>
+                                    <li class="aside-list"><a href="#">Card</a></li>
+                                    <li class="aside-list"><a href="#">Image</a></li>
+                                    <li class="aside-list"><a href="#">Input</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </aside>
+                    <div class="content-main-section"></div>
+                    <aside class="aside-right">
+                        <div class="aside-list-container aside-right-list">
+                            <ul>
+                                <h3>On this page</h3>
+                                <li class="aside-list"><a href="#">Same sized avatars</a></li>
+                                <li class="aside-list"><a href="#">Different sized avatars</a></li>
+                                <li class="aside-list"><a href="#">Avatars with text</a></li>
+                                <li class="aside-list"><a href="#">Conclusion</a></li>
+                            </ul>
+                        </div>
+                    </aside>
                 </div>
             </main>
         </div>
