--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,7 +5,7 @@ main{
     justify-content : center;  
 }
 
-.main-section{
+.main-section-home{
     /* border : 3px solid red; */
     display : flex;
     flex-direction: column;
@@ -14,18 +14,18 @@ main{
     padding : 1.5rem;
 }
 
-.main-section h1{
+.main-section-home h1{
     font-family: var(--homepage-heading-font);
     text-align: center;
     font-size : 5rem;
     /* border : 3px solid red; */
 }
 
-.main-section h1 span{
+.main-section-home h1 span{
     color : var(--test-color);
 }
 
-.main-section p{
+.main-section-home p{
     text-align: center;
     /* border : 3px solid red; */
     font-size : 2rem;
@@ -33,7 +33,7 @@ main{
     color : var(--dark-gray);
 }
 
-.btn-section{
+.btn-section-home{
     /* border : 3px solid green; */
     display : flex;
     align-items : center;
@@ -42,8 +42,9 @@ main{
     gap : 1.5rem;
 }
 
-.btn-main{
+.btn-main-home{
     padding : 1.5rem;
+    width : 14rem;
     font-size : 2rem;
     border : 3px solid var(--test-color);
     outline: none;
@@ -52,7 +53,7 @@ main{
     background-color: var(--light-test-color);
 }
 
-.btn-primary{
+.btn-primary-home{
     background-color : var(--test-color);
     color : var(--background-color);
     border : 3px solid var(--test-color);
@@ -69,14 +70,35 @@ main{
 }
 
 
+@media screen and (max-width : 600px){
+    .btn-section-home{
+        flex-direction: column;
+    }
+}
+
 @media screen and (max-width : 800px){
-    .main-section h1{
+    .main-section-home h1{
         font-size: 3.5rem;
     }
-    .main-section p , .btn-main{
+    .main-section-home p , .btn-main-home{
         font-size: 2.3rem;
     }   
-    .main-section{
+    .main-section-home{
         margin-top : 8rem;
+    }
+    .btn-main-home{
+        font-size : 1.6rem;
+    }
+}
+
+@media screen and (max-width : 400px){
+    .main-section-home {
+        margin-top: 0rem;
+    }
+    .main-section-home h1{
+        font-size: 3rem;
+    }
+    .main-section-home p{
+        font-size: 1.8rem;
     }
 }
