--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -54,7 +54,7 @@
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Components</h3>
-                                    <li class="aside-list"><a href="#">Avatar</a></li>
+                                    <li class="aside-list active-list-item"><a href="#">Avatar</a></li>
                                     <li class="aside-list"><a href="#">Badge</a></li>
                                     <li class="aside-list"><a href="#">Alert</a></li>
                                     <li class="aside-list"><a href="#">Button</a></li>
