avatar component done

--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
+    <link rel="stylesheet" href="./avatar.css">
+    <script src="../../prism/prism.js"></script>
     <title>Avatar | ZestUI</title>
 </head>
 <body>
@@ -54,7 +57,7 @@
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Components</h3>
-                                    <li class="aside-list active-list-item"><a href="#">Avatar</a></li>
+                                    <li class="aside-list active-list-item"><a href="./avatar.html">Avatar</a></li>
                                     <li class="aside-list"><a href="#">Badge</a></li>
                                     <li class="aside-list"><a href="#">Alert</a></li>
                                     <li class="aside-list"><a href="#">Button</a></li>
@@ -65,8 +68,72 @@
                             </div>
                         </div>
                     </aside>
-                    <div class="content-main-section"></div>
+                    <div class="content-main-section">
+                        <h1>Avatar</h1>
+                        <p class="mb-2">Avatars can be used for user profile picture.</p>
+                        <div class="divider mb-2"></div>
+                        <h2 class="mb-2">Same sized avatars</h2>
+                        <section class="component-scetion mb-2">
+                            <div class="component-display">
+
+                                <!-- Avatar Component code -->
+                                <div class="avatar av-sm">
+                                    <img src="../../assets/imgs/batman-profile.jpg" alt="demo avatar">
+                                </div>
+                                <div class="avatar av-sm">
+                                    <img src="../../assets/imgs/spidey-pic.jpg" alt="demo avatar">
+                                </div>
+                                <div class="avatar av-sm">
+                                    <img src="../../assets/imgs/deadpool-pic.jpg" alt="demo avatar">
+                                </div>
+                            </div>
+                            <div class="component-code-section">
+                                <script type="text/plain" class="language-markup code-snippet">
+                                    <div class="avatar  av-sm">
+                                        <img src=".." alt="..">
+                                    </div>
+                                    <div class="avatar av-sm">
+                                        <img src=".." alt="..">
+                                    </div>
+                                    <div class="avatar av-sm">
+                                        <img src=".." alt="..">
+                                    </div>
+                                </script>
+                            </div>
+                        </section>
+                        <div class="divider mb-2"></div>
+                        <h2 class="mb-2">Different sized avatars</h2>
+                        <section class="component-scetion mb-2">
+                            <div class="component-display">
+
+                                <!-- Avatar Component code -->
+                                <div class="avatar av-sm">
+                                    <img src="../../assets/imgs/batman-profile.jpg" alt="demo avatar">
+                                </div>
+                                <div class="avatar av-md">
+                                    <img src="../../assets/imgs/spidey-pic.jpg" alt="demo avatar">
+                                </div>
+                                <div class="avatar av-lg">
+                                    <img src="../../assets/imgs/deadpool-pic.jpg" alt="demo avatar">
+                                </div>
+                            </div>
+                            <div class="component-code-section">
+                                <script type="text/plain" class="language-markup code-snippet">
+                                    <div class="avatar av-sm">
+                                        <img src=".." alt="..">
+                                    </div>
+                                    <div class="avatar av-md">
+                                        <img src=".." alt="..">
+                                    </div>
+                                    <div class="avatar av-lg">
+                                        <img src=".." alt="..">
+                                    </div>
+                                </script>
+                            </div>
+                        </section>
+                    </div>
                     <aside class="aside-right">
+                        <div class="moving-container">
                         <div class="aside-list-container aside-right-list">
                             <ul>
                                 <h3>On this page</h3>
@@ -75,6 +142,7 @@
                                 <li class="aside-list"><a href="#">Avatars with text</a></li>
                                 <li class="aside-list"><a href="#">Conclusion</a></li>
                             </ul>
+                        </div>
                         </div>
                     </aside>
                 </div>
