--- a/CSS/documentation.css
+++ b/CSS/documentation.css
@@ -1,8 +1,3 @@
-/********************** importing fonts ************************/
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
-
 /********************* importing CSS ***************************/
 @import "./reset.css";
 @import "./colors.css";
@@ -10,8 +5,8 @@
 
 .container{
     /* border : 3px solid red;  */
-    width : 85%;
-    max-width : 130rem;
+    width : 90%;
+    /* max-width : 130rem; */
     margin : auto;
     position : relative;
     /* border : 3px solid red; */
@@ -26,6 +21,8 @@ nav{
     padding : 1rem; 
     position : sticky;
     top : 0;
+    z-index: 100;
+    background-color : var(--background-color);
 }
 
 .lib-name a{
@@ -52,11 +49,11 @@ nav{
 /********************** content section of the page  ******************/
 
 main{
-    margin-top : 30px;
-    border : 3px solid red;
+    margin-top : 3rem;
+    /* border : 3px solid red; */
 }
 .content-section-container{
-    border : 3px solid red;
+    /* border : 3px solid red; */
     display : grid;
     grid-template-areas: "sidebarLeft main-content sidebarRight";
     grid-template-columns: 20rem minmax(0,1fr) 20rem;
@@ -68,23 +65,47 @@ main{
 }
 
 .aside-left{
-    border : 3px solid purple;
+    /* border : 3px solid purple; */
     grid-area : sidebarLeft;
 }
 
 .content-main-section{
-    border : 3px solid green;
+    /* border : 3px solid green; */
+    margin : 0 2.5rem;
     grid-area: main-content;
 }
 
+.content-main-section h1{
+    font-size: 4rem;
+    font-family: var(--component-heading-font);
+}
+
+.content-main-section h2{
+    /* font-size: 4rem; */
+    font-family: var(--component-heading-font);
+}
+
+.content-main-section p{
+    font-size: 2rem;
+    font-family: var(--nav-list-items-font);
+}
+
+.mb-2{
+    margin-bottom: 2rem;
+}
+
+.divider{
+    border-bottom : 2px solid black;
+}
+
 .aside-right{
-    border : 3px solid yellow;
+    /* border : 3px solid yellow; */
     grid-area : sidebarRight;
 }
 
-/* .moving-container{
+.moving-container{
     position : fixed;
-} */
+}
 
 .txt-align-center{
     text-align: center;
@@ -119,13 +140,33 @@ main{
     font-size: 1.6rem;
 }
 
+/************************** avatar component documentation styles ********************/
 
+.component-display{
+    /* border : 3px solid red; */
+    display : flex;
+    flex-direction: row;
+    align-items : center;
+    justify-content : center;
+    flex-wrap: wrap;
+    gap : 2rem;
+    padding : 1.5rem;
+    background-color : rgba(102, 51, 153, 0.356);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
 
+.component-code-section{
+    /* border : 3px solid red; */
+    padding : 8px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color :  rgba(102, 51, 153, 0.356);
+}
 
-
-
-
-
+.code-snippet{
+    border-radius : 15px;
+}
 
 
 
