--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -1,5 +1,11 @@
+/***************************** importing google fonts ******************/
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
 :root{
     --library-logo-font : 'Shrikhand', cursive;
     --nav-list-items-font : 'Heebo', sans-serif;
     --homepage-heading-font : 'DM Sans', sans-serif;
+    --component-heading-font : 'Rubik', sans-serif;
 }
