gave some description to avatar components

--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -2,5 +2,5 @@
     --background-color : #fffafa;
     --dark-gray : #3d3c3c;
     --test-color : rebeccapurple;
-    --light-test-color : #66339923;
+    --light-test-color : hsla(270, 50%, 40%, 0.137);
 }
