--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -58,7 +58,7 @@
                                 <ul>
                                     <h3>Components</h3>
                                     <li class="aside-list active-list-item"><a href="./avatar.html">Avatar</a></li>
-                                    <li class="aside-list"><a href="#">Badge</a></li>
+                                    <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="#">Alert</a></li>
                                     <li class="aside-list"><a href="#">Button</a></li>
                                     <li class="aside-list"><a href="#">Card</a></li>
@@ -73,6 +73,7 @@
                         <p class="mb-2">Avatars can be used for user profile picture.</p>
                         <div class="divider mb-2"></div>
                         <h2 class="mb-2">Same sized avatars</h2>
+                        <p class="mb-2">These are all the rounded same sized buttons</p>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
 
@@ -103,6 +104,7 @@
                         </section>
                         <div class="divider mb-2"></div>
                         <h2 class="mb-2">Different sized avatars</h2>
+                        <p class="mb-2">These are different sized avatar , we have three sizes in available use <code class="code-text">av-sm</code> class for small , use <code class="code-text">av-md</code> for medium size and use <code class="code-text">av-lg</code> for large sized avatars</p>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
 
