--- a/CSS/documentation.css
+++ b/CSS/documentation.css
@@ -3,6 +3,12 @@
 @import "./colors.css";
 @import "./fonts.css";
 
+
+*{
+    scroll-behavior: smooth;
+}
+
+
 .container{
     /* border : 3px solid red;  */
     width : 90%;
@@ -19,8 +25,6 @@ nav{
     align-items : center;
     gap : 2rem;
     padding : 1rem; 
-    position : sticky;
-    top : 0;
     z-index: 100;
     background-color : var(--background-color);
 }
@@ -192,7 +196,7 @@ main{
     margin-left : auto;
 }
 
-.social-icon .icon{
+.social-icon .nav-icon{
     cursor : pointer;
 } 
 
