--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -2,5 +2,8 @@
     --background-color : #fffafa;
     --dark-gray : #3d3c3c;
     --test-color : rebeccapurple;
-    --light-test-color : hsla(270, 50%, 40%, 0.137);
+    --light-test-color : rgba(102, 51, 153, 0.356);
+    --status-online : #33ff00;
+    --status-offline : #939792;
+    --status-dnd : #f73e3e;
 }
