--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -59,8 +59,8 @@
                                     <h3>Components</h3>
                                     <li class="aside-list active-list-item"><a href="./avatar.html">Avatar</a></li>
                                     <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
-                                    <li class="aside-list"><a href="#">Alert</a></li>
-                                    <li class="aside-list"><a href="#">Button</a></li>
+                                    <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
+                                    <li class="aside-list"><a href="../button/button.html">Button</a></li>
                                     <li class="aside-list"><a href="#">Card</a></li>
                                     <li class="aside-list"><a href="#">Image</a></li>
                                     <li class="aside-list"><a href="#">Input</a></li>
