card component done

--- a/CSS/colors.css
+++ b/CSS/colors.css
@@ -19,4 +19,6 @@
     --warning-alert-background : #fde68a;
     --secondary-color : #F3F4F6;
     --secondary-hover : #E5E7EB;
+    --stone-500 : #78716c;
+    --dark-gray : #242323;
 }
