--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -61,7 +61,7 @@
                                     <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list"><a href="../button/button.html">Button</a></li>
-                                    <li class="aside-list"><a href="#">Card</a></li>
+                                    <li class="aside-list"><a href="../card/card.html">Card</a></li>
                                     <li class="aside-list"><a href="#">Image</a></li>
                                     <li class="aside-list"><a href="#">Input</a></li>
                                 </ul>
@@ -73,7 +73,7 @@
                         <p class="mb-2">Avatars can be used for user profile picture.</p>
                         <div class="divider mb-2"></div>
                         <h2 class="mb-2" id="same sized avatars">Same sized avatars</h2>
-                        <p class="mb-2">These are all the rounded same sized buttons</p>
+                        <p class="mb-2">These are all the rounded same sized avatars</p>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
 
