--- a/components/button/button.html
+++ b/components/button/button.html
@@ -64,7 +64,7 @@
                                     <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list active-list-item"><a href="./button.html">Button</a></li>
-                                    <li class="aside-list"><a href="#">Card</a></li>
+                                    <li class="aside-list"><a href="../card/card.html">Card</a></li>
                                     <li class="aside-list"><a href="#">Image</a></li>
                                     <li class="aside-list"><a href="#">Input</a></li>
                                 </ul>
