--- a/components/badges/badge.html
+++ b/components/badges/badge.html
@@ -63,7 +63,7 @@
                                     <li class="aside-list active-list-item"><a href="./badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list"><a href="../button/button.html">Button</a></li>
-                                    <li class="aside-list"><a href="#">Card</a></li>
+                                    <li class="aside-list"><a href="../card/card.html">Card</a></li>
                                     <li class="aside-list"><a href="#">Image</a></li>
                                     <li class="aside-list"><a href="#">Input</a></li>
                                 </ul>
