--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -62,8 +62,8 @@
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
                                     <li class="aside-list"><a href="../button/button.html">Button</a></li>
                                     <li class="aside-list"><a href="../card/card.html">Card</a></li>
-                                    <li class="aside-list"><a href="#">Image</a></li>
-                                    <li class="aside-list"><a href="#">Input</a></li>
+                                    <li class="aside-list"><a href="../image/image.html">Image</a></li>
+                                    <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                 </ul>
                             </div>
                         </div>
