--- a/components/input/input.html
+++ b/components/input/input.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../prism/prism.css">
     <link rel="stylesheet" href="../../CSS/documentation.css">
-    <!-- <link rel="stylesheet" href="../avatar/avatar.css"> -->
-    <link rel="stylesheet" href="./button.css">
-    <!-- <link rel="stylesheet" href="./badge.css"> -->
-    <script src="../../prism/prism.js"></script>
+    <link rel="stylesheet" href="./input.css">
+    <link rel="stylesheet" href="../button/button.css">
     <script src="https://kit.fontawesome.com/fd5cc9ac67.js" crossorigin="anonymous" defer></script>
-    <title>Buttons | ZestUI</title>
+    <script src="../../prism/prism.js"></script>
+    <title>Input | ZestUI</title>
 </head>
 <body>
     <!-- <div class="mega-parent-flex-container"> -->
@@ -63,129 +62,168 @@
                                     <li class="aside-list"><a href="../avatar/avatar.html">Avatar</a></li>
                                     <li class="aside-list"><a href="../badges/badge.html">Badge</a></li>
                                     <li class="aside-list"><a href="../alert/alert.html">Alert</a></li>
-                                    <li class="aside-list active-list-item"><a href="./button.html">Button</a></li>
+                                    <li class="aside-list"><a href="../button/button.html">Button</a></li>
                                     <li class="aside-list"><a href="../card/card.html">Card</a></li>
                                     <li class="aside-list"><a href="../image/image.html">Image</a></li>
-                                    <li class="aside-list"><a href="../input/input.html">Input</a></li>
+                                    <li class="aside-list active-list-item"><a href="./input.css">Input</a></li>
                                 </ul>
                             </div>
                         </div>
                     </aside>
                     <div class="content-main-section">
-                        <h1 id="to-the-top">Buttons</h1>
-                        <p class="mb-2">Buttons can be used to make your web page interactive to your user. You can use them to take user action.</p>
+                        <h1>Input</h1>
+                        <p class="mb-2">Input can be used to take input from your user. It can make your site more interactive.</p>
                         <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="filled-primary-buttons">Filled primary buttons</h2>
-                        <p class="mb-2">Use these classes <code class="code-text">btn-error-solid</code> , <code class="code-text">btn-primary-solid</code> , <code class="code-text">btn-secondary-solid</code> , <code class="code-text">btn-success-solid</code> to get the filled primary button according to your use case.</p>
+                        <h2 class="mb-2" id="text-area">Text area</h2>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
-                                <button class="btn btn-error-solid">ERROR</button>
-                                <button class="btn btn-primary-solid">PRIMARY</button>
-                                <button class="btn btn-secondary-solid">SECONDARY</button>
-                                <button class="btn btn-success-solid">SUCCESS</button>
+                                <div class="text-area-container">
+                                    <textarea class="textarea" placeholder="Type in your address"></textarea>
+                                    <button class="btn btn-primary-solid textarea-btn"><i class="fa-solid fa-floppy-disk"></i> Save</button>
+                                </div>
                             </div>
                             <div class="component-code-section">
                                 <script type="text/plain" class="language-markup code-snippet">
-                                <button class="btn btn-error-solid">Error</button>
-                                <button class="btn btn-primary-solid">Primary</button>
-                                <button class="btn btn-secondary-solid">Secondary</button>
-                                <button class="btn btn-success-solid">Success</button>
+                                    <div class="text-area-container">
+                                        <textarea class="textarea" placeholder="Type in your address"></textarea>
+                                        <button class="btn btn-primary-solid textarea-btn">
+                                            <i class="fa-solid fa-floppy-disk"></i> Save
+                                        </button>
+                                    </div>
                                 </script>
                             </div>
                         </section>
 
                         <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="outlined-primary-buttons">Outlined Primary Buttons</h2>
-                        <p class="mb-2">Use these classes <code class="code-text">btn-error-outline</code> , <code class="code-text">btn-primary-outline</code> , <code class="code-text">btn-secondary-outline</code> , <code class="code-text">btn-success-outline</code> to get the filled primary button according to your use case.</p>
+                        <h2 class="mb-2" id="form-input">Form input</h2>
                         <section class="component-scetion mb-2">
                             <div class="component-display">
-                                <button class="btn btn-error-outline">ERROR</button>
-                                <button class="btn btn-primary-outline">PRIMARY</button>
-                                <button class="btn btn-secondary-outline">SECONDARY</button>
-                                <button class="btn btn-success-outline">SUCCESS</button>
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                <button class="btn btn-error-outline">Error</button>
-                                <button class="btn btn-primary-outline">Primary</button>
-                                <button class="btn btn-secondary-outline">Secondary</button>
-                                <button class="btn btn-success-outline">Success</button>
-                                </script>
-                            </div>
-                        </section>
-
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="link-button">Link Button</h2>
-                        <p class="mb-2">Use the class <code class="code-text">btn-rounded</code> to give your links a distinct look.</p>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <button class="btn btn-primary-solid btn-rounded">Link</button>
-                                <button class="btn btn-primary-outline btn-rounded">Link</button>
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <button class="btn btn-primary-solid btn-rounded">Link</button>
-                                    <button class="btn btn-primary-outline btn-rounded">Link</button>
-                                </script>
-                            </div>
-                        </section>
-
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="icon-button">Icon Button</h2>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <button class="btn btn-primary-solid">
-                                    <i class="fa-solid fa-heart"></i> Like
-                                </button>
-                                <button class="btn btn-primary-outline">
-                                    <i class="fa-solid fa-star"></i> Star
-                                </button>
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <button class="btn btn-primary-solid">
-                                        <i class="fa-solid fa-heart"></i> Like
+                                <form class="form">
+                                    <input
+                                      class="input"
+                                      type="text"
+                                      name="first-name"
+                                      placeholder="Enter Your first name"
+                                    />
+                                    <input
+                                      class="input"
+                                      type="text"
+                                      name="last-name"
+                                      placeholder="Enter Your last name"
+                                    />
+                                    <input
+                                      class="input"
+                                      type="email"
+                                      name="email-id"
+                                      placeholder="Enter Your email id"
+                                    />
+                                    <input
+                                      class="input"
+                                      type="password"
+                                      name="password"
+                                      placeholder="Enter Your Password"
+                                    />
+                          
+                                    <button class="btn btn-primary-solid btn-squared">
+                                        <i class="fa-solid fa-arrow-right-to-bracket"></i> Sign up 
                                     </button>
-                                    <button class="btn btn-primary-outline">
-                                        <i class="fa-solid fa-star"></i> Star
+                                </form>
+                            </div>
+                            <div class="component-code-section">
+                                <script type="text/plain" class="language-markup code-snippet">
+                                    <form class="form">
+                                        <input
+                                          class="input"
+                                          type="text"
+                                          name="first-name"
+                                          placeholder="Enter Your first name"
+                                        />
+                                        <input
+                                          class="input"
+                                          type="text"
+                                          name="last-name"
+                                          placeholder="Enter Your last name"
+                                        />
+                                        <input
+                                          class="input"
+                                          type="email"
+                                          name="email-id"
+                                          placeholder="Enter Your email id"
+                                        />
+                                        <input
+                                          class="input"
+                                          type="password"
+                                          name="password"
+                                          placeholder="Enter Your Password"
+                                        />
+                              
+                                        <button class="btn btn-primary-solid btn-squared">
+                                            <i class="fa-solid fa-arrow-right-to-bracket"></i> Sign up 
+                                        </button>
+                                    </form>
+                                </script>
+                            </div>
+                        </section>
+
+                        <div class="divider mb-2"></div>
+                        <h2 class="mb-2" id="error-form-input">Error form input</h2>
+                        <section class="component-scetion mb-2">
+                            <div class="component-display">
+                                <form class="form">
+                                    <span class="error-msg">Enter correct email and password</span>
+                                    <input
+                                      class="input input-error"
+                                      type="email"
+                                      name="email-id"
+                                      placeholder="Enter Your email id"
+                                    />
+                                    <input 
+                                      class="input input-error"
+                                      type="password"
+                                      name="password"
+                                      placeholder="Enter Your Password"
+                                    />
+                          
+                                    <button class="btn btn-primary-solid btn-squared">
+                                        <i class="fa-solid fa-arrow-right-to-bracket"></i> log in 
                                     </button>
+                                </form>
+                            </div>
+                            <div class="component-code-section">
+                                <script type="text/plain" class="language-markup code-snippet">
+                                    <form class="form">
+                                        <span class="error-msg">Enter correct email and password</span>
+                                        <input
+                                          class="input input-error"
+                                          type="email"
+                                          name="email-id"
+                                          placeholder="Enter Your email id"
+                                        />
+                                        <input 
+                                          class="input input-error"
+                                          type="password"
+                                          name="password"
+                                          placeholder="Enter Your Password"
+                                        />
+                              
+                                        <button class="btn btn-primary-solid btn-squared">
+                                            <i class="fa-solid fa-arrow-right-to-bracket"></i> log in 
+                                        </button>
+                                    </form>
                                 </script>
                             </div>
                         </section>
 
                         
-                        <div class="divider mb-2"></div>
-                        <h2 class="mb-2"  id="floating-button">Floating Button</h2>
-                        <p class="mb-2">Use the class <code class="code-text">btn-floating</code> to make your button float.</p>
-                        <section class="component-scetion mb-2">
-                            <div class="component-display">
-                                <a href="#to-the-top">
-                                    <button class="btn-floating">
-                                        <i class="fas fa-arrow-up"></i>
-                                    </button>
-                                </a>
-                            </div>
-                            <div class="component-code-section">
-                                <script type="text/plain" class="language-markup code-snippet">
-                                    <a href="#to-the-top">
-                                        <button class="btn-floating">
-                                            <i class="fas fa-arrow-up"></i>
-                                        </button>
-                                    </a>
-                                </script>
-                            </div>
-                        </section>
                     </div>
                     <aside class="aside-right">
                         <div class="moving-container">
                         <div class="aside-list-container aside-right-list">
                             <ul>
                                 <h3>On this page</h3>
-                                <li class="aside-list"><a href="#filled-primary-buttons">Filled Primary Buttons</a></li>
-                                <li class="aside-list"><a href="#outlined-primary-buttons">Outlined Primary Buttons</a></li>
-                                <li class="aside-list"><a href="#link-button">Link Button</a></li>
-                                <li class="aside-list"><a href="#icon-button">Icon Button</a></li>
-                                <li class="aside-list"><a href="#floating-button">Floating Button</a></li>
+                                <li class="aside-list"><a href="#text-area">Text area</a></li>
+                                <li class="aside-list"><a href="#form-input">Form input</a></li>
+                                <li class="aside-list"><a href="#error-form-input">Error form input</a></li>
                             </ul>
                         </div>
                         </div>
