--- a/components/button/button.html
+++ b/components/button/button.html
@@ -53,7 +53,6 @@
                                     <h3>Get started</h3>
                                     <li class="aside-list"><a href="#">Introduction</a></li>
                                     <li class="aside-list"><a href="#">Colors</a></li>
-                                    <li class="aside-list"><a href="#">Typography</a></li>
                                     <li class="aside-list"><a href="#">Conclusion</a></li>
                                 </ul>
                             </div>
@@ -67,6 +66,7 @@
                                     <li class="aside-list"><a href="../card/card.html">Card</a></li>
                                     <li class="aside-list"><a href="../image/image.html">Image</a></li>
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
+                                    <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
                                 </ul>
                             </div>
                         </div>
