--- a/components/typography/typography.html
+++ b/components/typography/typography.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../CSS/documentation.css">
     <link rel="stylesheet" href="./typography.css">
     <script src="../../prism/prism.js"></script>
-    <title>Avatar | ZestUI</title>
+    <title>Typography | ZestUI</title>
 </head>
 <body>
     <!-- <div class="mega-parent-flex-container"> -->
