--- a/components/image/image.html
+++ b/components/image/image.html
@@ -64,6 +64,7 @@
                                     <li class="aside-list active-list-item"><a href="./image.html">Image</a></li>
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
+                                    <li class="aside-list"><a href="../list/list.html">List</a></li>
                                 </ul>
                             </div>
                         </div>
