--- a/components/badges/badge.html
+++ b/components/badges/badge.html
@@ -66,6 +66,7 @@
                                     <li class="aside-list"><a href="../image/image.html">Image</a></li>
                                     <li class="aside-list"><a href="../input/input.html">Input</a></li>
                                     <li class="aside-list"><a href="../typography/typography.html">Typography</a></li>
+                                    <li class="aside-list"><a href="../list/list.html">List</a></li>
                                 </ul>
                             </div>
                         </div>
